--- a/framework/NiuX.Extensions.Tests/NiuX.Extensions.Tests.csproj
+++ b/framework/NiuX.Extensions.Tests/NiuX.Extensions.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NiuX.Extensions\NiuX.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
